--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "unlikely",
   "version": "0.0.1",
-  "repo": "visionmedia/unlikely.c",
+  "repo": "clibs/unlikely",
   "description": "Branch prediction macros for gcc",
   "keywords": ["unlikely", "branch", "prediction", "macro"],
   "license": "MIT",
